outputs_20260327-054203-73cd0a5f/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\src\gtm_tom_3_phase_inverter_pwm.c:13:
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\include/IfxGtm_Tom_Timer.h:48:3: error: conflicting types for 'IfxGtm_Tom_Timer'; have 'struct <anonymous>'
   48 | } IfxGtm_Tom_Timer;
      |   ^~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\src\gtm_tom_3_phase_inverter_pwm.c:12:
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\include/IfxGtm_Tom_PwmHl.h:7:33: note: previous declaration of 'IfxGtm_Tom_Timer' with type 'IfxGtm_Tom_Timer'
    7 | typedef struct IfxGtm_Tom_Timer IfxGtm_Tom_Timer;
      |                                 ^~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\src\gtm_tom_3_phase_inverter_pwm.c:16:10: fatal error: IfxGtm_PinMap.h: No such file or directory
   16 | #include "IfxGtm_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:2:
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\include/IfxGtm_Tom_Timer.h:48:3: error: conflicting types for 'IfxGtm_Tom_Timer'; have 'struct <anonymous>'
   48 | } IfxGtm_Tom_Timer;
      |   ^~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\include/IfxGtm_Tom_Timer.h:7:
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\include/IfxGtm_Tom_PwmHl.h:7:33: note: previous declaration of 'IfxGtm_Tom_Timer' with type 'IfxGtm_Tom_Timer'
    7 | typedef struct IfxGtm_Tom_Timer IfxGtm_Tom_Timer;
      |                                 ^~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:263:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  263 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_1_TOUT11_P00_2_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:264:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  264 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_2_TOUT12_P00_3_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:265:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  265 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_3_TOUT13_P00_4_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:266:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  266 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_4_TOUT14_P00_5_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:267:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  267 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_5_TOUT15_P00_6_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:268:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  268 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_6_TOUT16_P00_7_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap

C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_002_update_multiple_calls_increment_counts':
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\test\test_gtm_tom_3_phase_inverter_pwm.c:161:28: error: implicit declaration of function 'mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount'; did you mean 'mock_IfxGtm_Tom_Timer_applyUpdate_getCallCount'? [-Wimplicit-function-declaration]
  161 |     uint32_t pre_apply   = mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount(); /* Intentionally incorrect to ensure using available getter - corrected below */
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                            mock_IfxGtm_Tom_Timer_applyUpdate_getCallCount
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\test\test_gtm_tom_3_phase_inverter_pwm.c:161:14: error: unused variable 'pre_apply' [-Werror=unused-variable]
  161 |     uint32_t pre_apply   = mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount(); /* Intentionally incorrect to ensure using available getter - corrected below */
      |              ^~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\test\test_gtm_tom_3_phase_inverter_pwm.c:160:14: error: unused variable 'pre_set' [-Werror=unused-variable]
  160 |     uint32_t pre_set     = mock_IfxGtm_Tom_PwmHl_setOnTime_getCallCount();
      |              ^~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cbx1yw5l\test\test_gtm_tom_3_phase_inverter_pwm.c:159:14: error: unused variable 'pre_disable' [-Werror=unused-variable]
  159 |     uint32_t pre_disable = mock_IfxGtm_Tom_Timer_disableUpdate_getCallCount();
      |              ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
